--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,13 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.3",
     "react-router-dom": "^7.12.0",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
+    "vite": "^7.3.0",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -39,8 +45,6 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.2",
-    "autoprefixer": "^10.4.23",
     "babel-jest": "^29.7.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -49,10 +53,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1",
-    "vite": "^7.3.0",
-    "vite-plugin-pwa": "^1.2.0"
+    "msw": "^2.3.0"
   }
 }
